--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
             &#xbb;
           </button>
         </div>
+        <div
+          class="radial"
+          style="display: flex; justify-content: center"
+        ></div>
       </div>
       <div class="scatter"></div>
     </div>
